# wgpu-slang-renderer

./: .gitignore  Cargo.toml  README.md  shell.nix  talking-points.md
.helix/: languages.toml
crates/cubemap-ktx2-baker/: Cargo.toml
crates/cubemap-ktx2-baker/src/: lib.rs  main.rs
crates/renderer/: .gitignore  Cargo.toml  build.rs
crates/renderer/res/: debug-normal-cube.mtl  debug-normal.ktx2  debug-roughness-arm.ktx2  debug-roughness-base-color.ktx2  debug-roughness-spheres.mtl  debug-sky-constant.ktx2  debug-sky-faces.ktx2  default-base-color-acescg.ktx2  default-base-color-srgb.ktx2  default-normal.ktx2  large-corridor.ktx2  shaper_to_display32.ktx2  shaper_to_displayP3_48.ktx2  shaper_to_srgb_48.ktx2  suzanne.mtl  wood-cube.mtl
crates/renderer/shaders/: hdr.slang  light-debug.slang  lit.slang  lit.wgsl  sky.slang
crates/renderer/shaders/modules/: filament-brdf.slang  math.slang  ocio.slang
crates/renderer/shaders/modules/color/: oklab.slang
crates/renderer/shaders/modules/common/: bsdf-properties.slang  light.slang  sky.slang
crates/renderer/shaders/modules/uniforms/: camera.slang  light.slang  sky.slang
crates/renderer/src/: hdr.rs  instance.rs  lib.rs  light.rs  main.rs  material.rs  model.rs  resources.rs  sky.rs  slang_macros.rs  texture.rs  wgpu_traits.rs
crates/renderer/src/shaders/: hdr.wgsl  lit.wgsl  sky.wgsl
crates/renderer/src/shaders/compiled/: hdr.wgsl
crates/renderer/src/shaders/src/: hdr.slang
crates/renderer/src/shaders/src/modules/: color.slang  ocio.slang  oklab.slang
ktx-texture-scripts/: equirect-exr-to-cube-ktx.sh  generate-display-view-lut-ktx.sh  studio-config-all-views-v2.3.0_aces-v2.0_ocio-v2.4.ocio
ocio-lut-generator/: clean32.exr  display-view32.exr  generate-lut.sh  shaper-to-display-view32.exr  shaper_to_display32.ktx2  studio-config-all-views-v2.3.0_aces-v2.0_ocio-v2.4.ocio
res/: default-arm.ktx2  gem.mtl  rogland_clear_night_256cube.ktx2  shaper_to_display32.ktx2  suzanne base color.ktx2  suzanne.mtl  wood-arm.ktx2  wood-normal.ktx2
scripts/: generate-display-view-shader.py
sh-coefficient-baker/: Cargo.toml
source-data/: wood-cube.blend  wood-cube.blend1  wood-cube.mtl
src/: basic_types.rs  camera.rs  hdr.rs  input_handling.rs  instance.rs  ktx2.rs  lib.rs  light.rs  main.rs  material.rs  model.rs  (+4 more)
(+16 files in other folders)
