[package]
name = "wgpu-slang-renderer"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [ "crates/renderer","crates/sh-coefficient-baker"]

[[bin]]
name = "renderer"
path = "crates/renderer/src/main.rs" 

[dependencies]
renderer = { version = "0.1.0", path = "crates/renderer" }

# This should go in the Cargo.toml in the root directory
[profile.release]
strip = true
