[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
bytemuck = { version = "1.16", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "25.0" }
anyhow = "1.0"
pollster = "0.4"
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"]}
instant = "0.1"
ktx2 = "0.4.0"
ruzstd = "0.8.1"
glam = "0.30.5"
image = "0.25.6"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
# we'll use webgl as our target since it is widely supported
# but this is where we would swap to webgpu instead, if wanted
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    # "GpuCanvasConfiguration",
    # "GpuCanvasContext",
    # "GpuCanvasToneMapping",
    # "GpuCanvasToneMappingMode",
]}
reqwest = { version = "0.11" }

# this section is to prevent the compilation bug with wasm-opt
# Source: https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory", "--all-features"]
